# support-bot-topic

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.image.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: __main__.py  config.py  logger.py
app/bot/: commands.py  manager.py
app/bot/handlers/group/: __init__.py  callback_query.py  command.py  message.py  windows.py
app/bot/handlers/private/: callback_query.py  command.py  message.py  my_chat_member.py  windows.py
app/bot/jobs/: __init__.py  bump_topic.py  close_inactive_topic.py  delete_inactive_topics.py  send_new_topics.py
app/bot/middlewares/: __init__.py  manager.py
app/bot/utils/: __init__.py  create_forum_topic.py  notifications.py  texts.py  topics.py
app/bot/utils/redis/: __init__.py  models.py
