[project]
name = "support-bot-topic"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem",email = "sm1kyx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (==3.7.0)",
    "aiogram-newsletter (>=0.0.10)",
    "cachetools (==5.3.2)",
    "environs (==10.3.0)",
    "pydantic (==2.5.3)",
    "redis (==5.0.1)",
    "aiohttp (==3.9.0)",
    "aioredis (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
